[tool.poetry]
name = "api-pedidos"
version = "0.1.0"
description = ""
authors = ["guimoreirapereira <guimoreirapereira@gmail.com>"]
readme = "README.md"
packages = [{include = "api_pedidos"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.1"
httpx = "^0.24.0"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
